maze.lessons.maze.island.IslandMaze.scala.error
Escaper:42: error: not found: value Color
	while (getCouleurSol == Color.RED)
                                ^